# type-nat-solver

./: .travis.yml  LICENSE  Makefile  README.mkd  TypeNatSolver.hs  type-nat-solver.cabal
docs/: CHANGES  Examples.hs  Makefile  notes.markdown  paper.tex  refs.bib  review_comments_1.txt  review_comments_2.txt  review_comments_3.txt  run-example
examples/: A.hs  B.hs
src/: TypeNatSolver.hs
tests/should-compile/: I2.hs
tests/should-fail/: I1.hs
