name:                type-nat-solver
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Iavor S. Diatchki
maintainer:          iavor.diatchki@gmail.com
category:            Development
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     TypeNatSolver
  build-depends:       base, containers, ghc, simple-smt >= 0.5.4, ghc-tcplugins-extra >= 0.1
  default-language:    Haskell2010
  GHC-options:         -Wall -O2

Test-Suite test-type-nat-solver
  type: exitcode-stdio-1.0
  hs-source-dirs:      examples
  main-is: A.hs
  build-depends: base, type-nat-solver == 0.1.0.0
